finished the design

--- a/src/style.css
+++ b/src/style.css
@@ -47,7 +47,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /** Global CSS **/
-/* We recommend writing minimal component-specific CSS here */
+/* .main-container{
+  width :100vw;
+  height :100vh;
+} */
 
 
 /** Attribution CSS **/
